--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-    <!-- HINT: React adds elements directly to the DOM -->
+    <!-- Good guess, but React adds elements directly to the DOM. 
+      If only there were a set of tools that allowed you to view 
+      the DOM directly...  -->
     </div>
   </body>
 </html>
