adding state for create post

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,5 +18,6 @@
       If only there were a set of tools that allowed you to view 
       the DOM directly...  -->
     </div>
+    <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
   </body>
 </html>
