--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hack This MEAN Site</title>
   </head>
-  <body>
+  <body style='background-color: #3F4045'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     <!-- Good guess, but React adds elements directly to the DOM. 
