--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .background-bg {
+        background-image: url('https://i.ytimg.com/vi/GcUiuqZ1nPg/maxresdefault.jpg');
+        background-repeat: no-repeat;
+        background-size: 100vw 100vh;
+      }
+    </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -11,13 +18,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hack This MEAN Site</title>
   </head>
-  <body style='background-color: #3F4045'>
+  <body style='background-color: #3F4045' class='background-bg'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     <!-- Good guess, but React adds elements directly to the DOM. 
       If only there were a set of tools that allowed you to view 
       the DOM directly...  -->
     </div>
-    <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script> -->
   </body>
 </html>
