config background img

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       .background-bg {
-        background-image: url('https://i.ytimg.com/vi/GcUiuqZ1nPg/maxresdefault.jpg');
+        background-image: url('background.jpg');
         background-repeat: no-repeat;
         background-size: 100vw 100vh;
       }
