--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <style>
       .background-bg {
         background-image: url('background.jpg');
@@ -21,9 +22,6 @@
   <body style='background-color: #3F4045' class='background-bg'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-    <!-- Good guess, but React adds elements directly to the DOM. 
-      If only there were a set of tools that allowed you to view 
-      the DOM directly...  -->
     </div>
     <!-- <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script> -->
   </body>
