set sourcemap to false

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,11 @@
         background-size: 100vw 100vh;
       }
     </style>
+    <script>
+      if (typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
+        __REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function() {};
+      }
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
